--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "port",
   "version": "1.0.0",
-  "description": "My super-duper Nuxt.js project",
-  "author": "",
+  "description": "My cat&#39;s pajamas Nuxt.js project",
+  "author": "Alejandro Arevalo",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -13,9 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
@@ -24,9 +22,6 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
