--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nuxtjs/composition-api": "^0.12.4",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt-compress": "^3.0.0"
+    "nuxt-compress": "^3.0.0",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
