--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@nuxtjs/composition-api": "^0.12.4",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt-compress": "^3.0.0",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxt-compress": "^3.0.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.5",
